External and Static